# test2-parcel_microservice

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .secrets.toml  Dockerfile  Dockerfile_test  README.md  alembic.ini  docker-compose.yml  docker-compose_tests.yml  prometheus.yml  pyproject.toml  settings.dev.toml
src/: database.py  exceptions.py  main.py
src/api/: __init__.py  healthcheck.py  tasks.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: fx_rate_upd.py  package_routes.py  samples.py  type_routes.py
src/application/commands/: create_package_type.py  register_package.py  update_exchange_rate.py
src/application/queries/: get_package.py  get_types.py  list_packages.py
src/core/: celery_app.py  config.py  logger.py
src/domain/models/: __init__.py  package.py  package_type.py
src/domain/services/: cost_calculator.py
src/infrastructure/: dependencies.py
src/infrastructure/connectors/: init.py  redis_connector.py
src/infrastructure/db/: database.py  db_manager.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/debugging/: future_tracker.py
src/infrastructure/middleware/: session.py
src/infrastructure/repositories/: __init__.py  base.py  package_repository.py  type_repository.py
src/infrastructure/repositories/ mappers/: base.py  mappers.py
src/infrastructure/repositories/mappers/: __init__.py  base.py  (+1 more)
src/infrastructure/tasks/: tasks.py
src/migrations/: env.py
src/shared/schemas/: package_schemas.py  type_schemas.py
tests/: conftest.py  test_fx_rate_update.py  test_package_api.py
